src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Dhruvsoft__Discount__c</fullName>
        <label>Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dhruvsoft__Unit_Price_Before_Discount__c</fullName>
        <label>Unit Price Before Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dhruvsoft__converted_form_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>converted form opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dhruvsoft__opportunity_line_item_Id__c</fullName>
        <label>opportunity line item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scheduled_product__c</fullName>
        <description>Confirm if the Scheduling is enabled for this product</description>
        <formula>IF( AND( Dhruvsoft__converted_form_opportunity__c, NOT(isnull(Dhruvsoft__opportunity_line_item_Id__c )), OR  (PricebookEntry.Product2.CanUseQuantitySchedule,PricebookEntry.Product2.CanUseRevenueSchedule ) ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Product</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>